# yaxxdi

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  cSpell.json
cmake/: load_external_project.cmake
cmake/external_projects/: cxxopts.cmake  nlohmann_json.cmake
src/: CMakeLists.txt  gen-header.cpp  gen-source.cpp  gen-spec.cpp  main.cpp  name.hpp  spec.cpp  spec.hpp
